--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
 # See https://www.dartlang.org/guides/libraries/private-files
 
 # Files and directories created by pub
+.DS_Store
 .dart_tool/
+
 .packages
 .pub/
+
 build/
+
+.flutter-plugins
+
 # If you're building an application, you may want to check-in your pubspec.lock
 pubspec.lock
 
