--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,7 +29,7 @@ android {
         //ndk设置
         ndk {
             //只要arm64-v8a的动态库
-            abiFilters "arm64-v8a"
+            abiFilters "arm64-v8a","x86"
         }
         //测试框架
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
